tdf#138945 update fObjectRotation for NbcResize

SdrObjCustomShape::NbcResize uses the inherited SdrTextObj::NbcResize.
But a SdrTextObj does not know fObjectRotation. Explicit update to new
rotation angle after resize is needed.
The error became visible, if you changed width or height of a rotated
or sheared custom shape in the Position&Size dialog. Then the shape
handles were not on the shape outline.

Change-Id: Idbe47a3b1ef2b34e9645d62830cb330f2e49bd3e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/107792
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
(cherry picked from commit d4ca360f6632f03e9fb7e9af37aac40d23f1249a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/107803
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>