svx/source/svdraw/svdoashp.cxx
@@ -1525,6 +1525,30 @@ void SdrObjCustomShape::NbcResize( const Point& rRef, const Fraction& rxFact, co
         {
         }
     }
+
+    // updating fObjectRotation
+    tools::Long nTextObjRotation = aGeo.nRotationAngle;
+    double fAngle = nTextObjRotation;
+    fAngle /= 100.0;
+    if (IsMirroredX())
+    {
+        if (IsMirroredY())
+            fObjectRotation = fAngle - 180.0;
+        else
+            fObjectRotation = -fAngle;
+    }
+    else
+    {
+        if (IsMirroredY())
+            fObjectRotation = 180.0 - fAngle;
+        else
+            fObjectRotation = fAngle;
+    }
+    while (fObjectRotation < 0)
+        fObjectRotation += 360.0;
+    while (fObjectRotation >= 360.0)
+        fObjectRotation -= 360.0;
+
     InvalidateRenderGeometry();
 }
 
